poke/testsuite/poke.pkl/struct-types-defun-diag-2.pk
/* { dg-do compile } */

deftype Foo =
  struct
  {
    int i;
    defun foo = void:
      {
        defun bar = void:
        {
          i = 2; /* { dg-error "invalid assignment" } */
        }

        bar;
      }
  };
